--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+    --font-color: hsl(0, 0%, 15%);
+    --font-output: hsla(0, 0%, 100%, 0.8);
+    --font-label: hsl(0, 0%, 65%);
+    --font-color-label: #4cb1c0;
+    --bg-cell: hsla(0, 0%, 100%, 0.2);
+    --bg-label: hsla(0, 0%, 100%, 0.7);
+    --bg-color: linear-gradient(to right top, #7aebd6, #5bc6d6);
+    --bg-glas: linear-gradient(to right bottom, hsla(0, 0%, 100%, 0.2), hsla(0, 0%, 100%, 0.1));
+    --border-glas: 1px solid hsla(0, 0%, 100%, 0.7);
+    --border-radius: 1rem;
+    --blur-filter: blur(1rem);
+    --drop-shadow: 2rem 2rem 3rem hsla(0, 0%, 0%, 0.1), -2rem -2rem 3rem hsla(0, 0%, 0%, 0.1);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html {
+    min-height: 100%;
+}
+
+body {
+    min-height: 100%;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    color: var(--font-color);
+    background: var(--bg-color);
+    display: grid;
+    place-items: center;
+    padding: 3rem;
 }
